--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,22 @@
     width: 350px;
 }
 
+.category-btn {
+    font-weight: bold !important;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    cursor: pointer;
+    background: transparent;
+    outline: none;
+    border: none;
+    padding: 7px 15px;
+    margin: 10px 0px;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+}
+
 .category-btn:hover {
     background-color: #76323f !important;
     color: #fff !important;
