--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,21 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(114, 113, 113);
+    border-radius: 10px;
+    height: 200px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 .search-bar {
     border: none;
     outline: none;
@@ -20,7 +35,7 @@
     background: transparent;
     outline: none;
     border: none;
-    padding: 7px 15px;
+    padding: 10px 25px;
     margin: 10px 0px;
     border-radius: 20px;
     transition: all 0.3s ease;
